k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codevault-api
  namespace: codevault-exec
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codevault-api
  template:
    metadata:
      labels:
        app: codevault-api
    spec:
      serviceAccountName: codevault-executor
      containers:
      - name: codevault-api
        image: codevault-backend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: codevault-exec
spec:
  type: NodePort
  selector:
    app: codevault-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
